--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,6 +11,9 @@ NEXT VERSION
     version of the mode (joncampbell123).
   - S3 emulation will mark any more large enough to exceed bank switching
     limits in S3 hardware as _REQUIRE_LFB (joncampbell123).
+  - I'm not sure why Adlib emulation defaults to 48KHz in most versions of
+    DOSBox, but the hardware rate is 49716 and that should be the default
+    (joncampbell123).
 
 2026.01.02
   - VESA BIOS will remove 8-bit bank switching limit if the video memory
