--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,7 +27,8 @@ NEXT VERSION
     DOSBox, but the hardware rate is 49716 and that should be the default
     (joncampbell123).
   - Fixed crash on starting debugger on MinGW builds (maron2000)
-  - Use more ChinaSea/Big5-2003 extended characters for CP951 (1abcd)
+  - Adjusted the ChinaSea/Big5-2003 extended code point ranges for CP951 to
+    0x9140–0xA3FE and 0xC6A1–0xFEFE (1abcd)
   - Replaced deprecated symbols to enable launching on old macOSs (maron2000)
   - Converted all bash-dependent shell files to POSIX-shell compliant
     (pandasoli)
